; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/bootmgr/extr_main.c_safe_boot_request_start.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/bootmgr/extr_main.c_safe_boot_request_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MICROPY_SAFE_BOOT_PORT = common dso_local global i32 0, align 4
@MICROPY_SAFE_BOOT_PORT_PIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @safe_boot_request_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @safe_boot_request_start(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @MICROPY_SAFE_BOOT_PORT, align 4
  %4 = load i32, i32* @MICROPY_SAFE_BOOT_PORT_PIN, align 4
  %5 = call i64 @MAP_GPIOPinRead(i32 %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = mul nsw i32 %8, 1000
  %10 = call i32 @UTILS_DELAY_US_TO_COUNT(i32 %9)
  %11 = call i32 @UtilsDelay(i32 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* @MICROPY_SAFE_BOOT_PORT, align 4
  %14 = load i32, i32* @MICROPY_SAFE_BOOT_PORT_PIN, align 4
  %15 = call i64 @MAP_GPIOPinRead(i32 %13, i32 %14)
  %16 = icmp ne i64 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 1, i32 0
  ret i32 %18
}

declare dso_local i64 @MAP_GPIOPinRead(i32, i32) #1

declare dso_local i32 @UtilsDelay(i32) #1

declare dso_local i32 @UTILS_DELAY_US_TO_COUNT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
